PR/39201: Brian Marcotte: "who am i" problem when using ptyfs, because it strips pts/